<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_add_repo"
		android:icon="@drawable/ic_add"
		android:title="@string/add_repo"
		app:showAsAction="always" />

	<item
		android:id="@+id/action_search"
		android:icon="?actionModeWebSearchDrawable"
		android:title="@string/search"
		app:actionViewClass="androidx.appcompat.widget.SearchView"
		app:showAsAction="always|collapseActionView" />

	<item
		android:id="@+id/action_refresh"
		android:icon="@drawable/ic_sync"
		android:title="@string/update"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_manage_repos"
		android:title="@string/manage_repos"
		app:showAsAction="never" />
</menu>
