<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<io.github.landwarderer.neyon.core.ui.sheet.AdaptiveSheetHeaderBar
		android:id="@+id/headerBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:title="@string/welcome" />

	<androidx.core.widget.NestedScrollView
		android:id="@+id/scrollView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clipToPadding="false"
		android:scrollIndicators="top">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingBottom="@dimen/margin_normal">

			<TextView
				android:id="@+id/textView_welcome_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_normal"
				android:drawablePadding="16dp"
				android:singleLine="true"
				android:text="@string/welcome"
				android:textAppearance="?textAppearanceTitleLarge"
				app:drawableStartCompat="@drawable/ic_welcome" />

			<HorizontalScrollView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:scrollbars="none">

				<com.google.android.material.chip.ChipGroup
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingHorizontal="@dimen/margin_normal"
					app:singleLine="true">

					<com.google.android.material.chip.Chip
						android:id="@+id/chip_backup"
						style="@style/Widget.Neyon.Chip.Assist"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/restore_backup"
						app:chipIcon="@drawable/ic_backup_restore" />

					<com.google.android.material.chip.Chip
						android:id="@+id/chip_sync"
						style="@style/Widget.Neyon.Chip.Assist"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/sync_auth"
						app:chipIcon="@drawable/ic_sync" />

					<com.google.android.material.chip.Chip
						android:id="@+id/chip_directories"
						style="@style/Widget.Neyon.Chip.Assist"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/local_manga_directories"
						app:chipIcon="@drawable/ic_storage" />

				</com.google.android.material.chip.ChipGroup>

			</HorizontalScrollView>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_normal"
				android:layout_marginTop="8dp"
				android:gravity="center_vertical"
				android:orientation="horizontal">

				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="vertical">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/crash_reporting"
						android:textAppearance="?textAppearanceTitleSmall" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="2dp"
						android:text="@string/crash_reporting_summary"
						android:textAppearance="?textAppearanceBodySmall" />

				</LinearLayout>

				<com.google.android.material.materialswitch.MaterialSwitch
					android:id="@+id/switch_crash_reporting"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/margin_normal"
					android:checked="false" />

			</LinearLayout>

			<TextView
				android:id="@+id/textView_hint"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:paddingHorizontal="@dimen/margin_normal"
				android:text="@string/welcome_text"
				android:textAppearance="?textAppearanceBodyMedium" />

			<TextView
				android:id="@+id/textView_locales_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_normal"
				android:layout_marginTop="@dimen/margin_normal"
				android:singleLine="true"
				android:text="@string/languages"
				android:textAppearance="?textAppearanceTitleSmall" />

			<io.github.landwarderer.neyon.core.ui.widgets.ChipsView
				android:id="@+id/chips_locales"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_normal"
				android:layout_marginTop="@dimen/margin_normal"
				app:chipStyle="@style/Widget.Neyon.Chip.Filter" />

			<TextView
				android:id="@+id/textView_type_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_normal"
				android:layout_marginTop="@dimen/margin_normal"
				android:singleLine="true"
				android:text="@string/type"
				android:textAppearance="?textAppearanceTitleSmall" />

			<io.github.landwarderer.neyon.core.ui.widgets.ChipsView
				android:id="@+id/chips_type"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/margin_normal"
				android:layout_marginTop="@dimen/margin_normal"
				app:chipStyle="@style/Widget.Neyon.Chip.Filter" />

		</LinearLayout>
	</androidx.core.widget.NestedScrollView>
</LinearLayout>
